src/test/resources/delivery2/expressions/invalid/semantic/arithmetic/mixingIntAndBoolean.pas
program Demo;
var
  x, y, z : integer;
  a : boolean;
begin
    x := 100;
    y := 200;
    a := true;
    z := x * a;
    writeln(z)
end.